<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="110dp"
    android:orientation="horizontal"
    android:background="@android:color/black"
    android:layout_alignParentBottom="true"
    android:paddingTop="10dp"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/renner"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:text="@string/tela_inicial"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/cabide"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:text="@string/loja_virtual"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/coracao"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:text="@string/blog"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/cartaorenner"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:text="@string/cart_es_renner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/pontopontoponto"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:text="@string/mais"/>
    </LinearLayout>

</LinearLayout>